--- a/apache_spark/thesis/einfuehrung.tex
+++ b/apache_spark/thesis/einfuehrung.tex
@@ -100,10 +100,10 @@ Aus diesem Grund wurde am \textit{AMPLab} der University of California in Berkel
 \section{Ziel und Aufbau dieser Arbeit}
 \label{section:ziel dieser Arbeit}
 
-Die vorliegende Arbeit beschäftigt sich mit \textit{Apache Spark} und dem dazugehörigen Ökosystem bestehend aus Schichten mit verschiedenen Bibliotheken, dem \textit{Berkeley Data Anaytics Stack (BDAS)}. Auf dem Markt befindet sich bislang noch verhältnismäßig wenig Literatur zu diesem Thema und wenn, dann werden zumeist Teilaspekte für bestimmte Anwendungsbereiche gekapselt betrachtet. Diese Arbeit soll zunächst einen ganzheitlichen Überblick über den Stack bieten. Hier werden die einzelnen Schichten des Stacks kurz beschrieben und gegebenenfalls Alternativlösungen zu den jeweiligen Implementierungen vorgestellt. 
+Die vorliegende Arbeit beschäftigt sich mit \textit{Apache Spark} und dem dazugehörigen Ökosystem bestehend aus Schichten mit verschiedenen Bibliotheken, dem \textit{Berkeley Data Anaytics Stack (BDAS)}. Auf dem Markt befindet sich bislang noch verhältnismäßig wenig Literatur zu diesem Thema und wenn, dann werden zumeist Teilaspekte für bestimmte Anwendungsbereiche gekapselt betrachtet. Diese Arbeit soll, nachdem einige Grundlagen zum Thema \textit{Big Data Analytics} im Allgemeinen diskutiert werden, zunächst einen ganzheitlichen Überblick über den BDAS bieten. Hier werden die einzelnen Schichten des Stacks kurz beschrieben und gegebenenfalls Alternativlösungen zu den jeweiligen Implementierungen vorgestellt. 
 
-Insbesondere werden in den darauffolgenden Kapiteln die Statistik- und Vorhersagebibliotheken \textit{MLLib} im Gegensatz zu \textit{H2O} betrachtet und die Kernimplementierung von Spark mit dem neueren Framework \textit{Apache Flink} \footnote{Entwickelt von der Technischen Universität Berlin zunächst unter dem Namen \textit{Stratosphere} und mittlerweile (Stand Ende 2014) \textit{Apache Incubator} Projekt} verglichen. Die Bibliotheken des Caching-Frameworks Tachyon werden vorgestellt, sowie die Streaming-Bibliothek Spark Streaming und die Graphenanwendung GraphX. 
+Insbesondere werden in den darauffolgenden Kapiteln die Statistik- und Vorhersagebibliotheken \textit{MLLib} betrachtet, in einigen Punkten mit der Alternativbibliothek \textit{H2O} verglichen und die Kernimplementierung von Spark mit dem neueren Framework \textit{Apache Flink} \footnote{Entwickelt von der Technischen Universität Berlin zunächst unter dem Namen \textit{Stratosphere} und mittlerweile (Stand Ende 2014) \textit{Apache Incubator} Projekt} verglichen. Auch die übrigen Elemente des BDAS wie das Caching-Frameworks Tachyon, sowie die Streaming-Bibliothek Spark Streaming und die Graphenanwendung GraphX werden vorgestellt. 
 
-Dann werden jeweils praktische Anwendungsbeispiele gezeigt und im Zuge dessen die APIs \footnote{API = Application Programming Interface. Schnittstelle, die von einem Softwaresystem für die Einbindung in andere Softwwaresysteme zur Verfügung gestellt wird.}von Spark und MLlib insbesondere vorgestellt.   
+Im letzten Teil dieser Arbeit werden jeweils praktische Anwendungsbeispiele gezeigt und im Zuge dessen die APIs \footnote{API = Application Programming Interface. Schnittstelle, die von einem Softwaresystem für die Einbindung in andere Softwwaresysteme zur Verfügung gestellt wird.}von Spark und MLlib insbesondere vorgestellt.   
 
 
