--- a/apache_spark/thesis/internetQuellen.bib
+++ b/apache_spark/thesis/internetQuellen.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2014-12-13 12:59:16 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-01-08 21:08:21 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{ckb11,
+	Author = {Dr. Goutam Chakraborty, Murali Krishna Pagolu},
+	Date-Added = {2015-01-08 12:12:18 +0000},
+	Date-Modified = {2015-01-08 20:08:21 +0000},
+	Month = {08},
+	Title = {Analysis of Unstructured Data: Applications of Text Analytics and Sentiment Mining URL: http://support.sas.com/resources/papers/proceedings14/1288-2014.pdf},
+	Year = {2014}}
 
 @misc{ga13,
 	Author = {Janessa Rivera},
