--- a/apache_spark/thesis/literaturVerzeichnis.bib
+++ b/apache_spark/thesis/literaturVerzeichnis.bib
@@ -1,12 +1,46 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2014-12-26 21:10:11 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-01-08 21:02:23 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{pdl97,
+	Author = {S.M. Weiss, N. Indurkhya},
+	Date-Added = {2015-01-08 20:00:34 +0000},
+	Date-Modified = {2015-01-08 20:02:19 +0000},
+	Publisher = {Morgan-Kaufman},
+	Title = {Predictive data mining: A practical guide.},
+	Year = {1997}}
+
+@book{mit96,
+	Author = {U.M. Fayyad, G. Piatetsky-Shapiro, et al.},
+	Date-Added = {2015-01-08 16:50:12 +0000},
+	Date-Modified = {2015-01-08 16:52:30 +0000},
+	Publisher = {AAAI/MIT Press},
+	Title = {Advances in Knowledge Dicovery and Data Mining},
+	Year = {1996}}
+
+@book{cl14,
+	Author = {J{\"u}rgen Cleve, Uwe L{\"a}mmel},
+	Date-Added = {2015-01-08 14:32:04 +0000},
+	Date-Modified = {2015-01-08 14:35:57 +0000},
+	Edition = {1},
+	Publisher = {De Gruyter/Oldenbourg Wissenschaftsverlag },
+	Title = {Data Mining},
+	Year = {2014}}
+
+@book{bda1,
+	Author = {Dr. Arvind Sathi},
+	Date-Added = {2014-12-27 14:55:17 +0000},
+	Date-Modified = {2014-12-27 14:55:56 +0000},
+	Edition = {First Edition},
+	Publisher = {MC Press},
+	Title = {Big Data Analytics: Disruptive Technologies for Changing the Game},
+	Year = {2012}}
 
 @book{tan1,
 	Author = {Andrew S. Tanenbaum, Maarten van Steen},
