--- a/apache_spark/thesis/literaturVerzeichnis.bib
+++ b/apache_spark/thesis/literaturVerzeichnis.bib
@@ -1,12 +1,37 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-01-08 21:02:23 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-01-09 23:09:38 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{pml06,
+	Author = {C.M. Bishop},
+	Date-Added = {2015-01-09 22:00:17 +0000},
+	Date-Modified = {2015-01-09 22:01:03 +0000},
+	Publisher = {Springer},
+	Title = {Pattern Recognition and Machine Learning},
+	Year = {2006}}
+
+@book{sim83,
+	Author = {H.A. Simon, P. Langley, G.L. Bradshaw},
+	Date-Added = {2015-01-09 09:50:40 +0000},
+	Date-Modified = {2015-01-09 09:54:20 +0000},
+	Publisher = {Tiogra Publishing Co.},
+	Title = {Rediscovering chemistry with the BACON system - Machine learning, an artificial intelligence approach},
+	Year = {1983}}
+
+@book{isl13,
+	Author = {Gareth James, Daniela Witten, et al.},
+	Date-Added = {2015-01-09 09:31:20 +0000},
+	Date-Modified = {2015-01-09 13:41:39 +0000},
+	Edition = {4},
+	Publisher = {Springer},
+	Title = {An Introduction to Statistical Learning with Applications in R},
+	Year = {2013}}
 
 @book{pdl97,
 	Author = {S.M. Weiss, N. Indurkhya},
@@ -19,9 +44,9 @@
 @book{mit96,
 	Author = {U.M. Fayyad, G. Piatetsky-Shapiro, et al.},
 	Date-Added = {2015-01-08 16:50:12 +0000},
-	Date-Modified = {2015-01-08 16:52:30 +0000},
+	Date-Modified = {2015-01-09 22:09:38 +0000},
 	Publisher = {AAAI/MIT Press},
-	Title = {Advances in Knowledge Dicovery and Data Mining},
+	Title = {Advances in Knowledge Discovery and Data Mining},
 	Year = {1996}}
 
 @book{cl14,
