--- a/apache_spark/thesis/internetQuellen.bib
+++ b/apache_spark/thesis/internetQuellen.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-01-08 21:08:21 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-01-11 17:54:30 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{bdc13,
+	Author = {Shan Suthaharan},
+	Date-Added = {2015-01-11 16:51:14 +0000},
+	Date-Modified = {2015-01-11 16:54:30 +0000},
+	Month = {08},
+	Publisher = {Department of Computer Science University of North Carolina at Greensboro},
+	Title = {Big Data Classification: Problems and Challenges in Network Intrusion Prediction with Machine Learning URL: http://www.sigmetrics.org/sigmetrics2013/bigdataanalytics/abstracts2013/bdaw2013_submission_4.pdf},
+	Year = {2013}}
 
 @misc{ckb11,
 	Author = {Dr. Goutam Chakraborty, Murali Krishna Pagolu},
