--- a/apache_spark/thesis/literaturVerzeichnis.bib
+++ b/apache_spark/thesis/literaturVerzeichnis.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-01-09 23:09:38 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-01-11 21:00:31 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{tdwi11,
+	Author = {Philip Russom},
+	Date-Added = {2015-01-11 19:58:31 +0000},
+	Date-Modified = {2015-01-11 20:00:30 +0000},
+	Publisher = {TDWI Research},
+	Title = {TDWI Best Practices Report: Big Data Analytics},
+	Year = {2011}}
+
+@book{bi12,
+	Author = {Norbert Gronau, Corinna Fohrhol},
+	Date-Added = {2015-01-11 18:59:18 +0000},
+	Date-Modified = {2015-01-11 19:00:13 +0000},
+	Publisher = {Addison-Wesley},
+	Title = {Wettbewerbsfaktor Analytics -- Reifegrade ermitteln, Wirtschaftlichkeitspotentiale entdecken},
+	Year = {2012}}
 
 @book{pml06,
 	Author = {C.M. Bishop},
@@ -54,7 +70,7 @@
 	Date-Added = {2015-01-08 14:32:04 +0000},
 	Date-Modified = {2015-01-08 14:35:57 +0000},
 	Edition = {1},
-	Publisher = {De Gruyter/Oldenbourg Wissenschaftsverlag },
+	Publisher = {De Gruyter/Oldenbourg Wissenschaftsverlag},
 	Title = {Data Mining},
 	Year = {2014}}
 
