--- a/apache_spark/thesis/thesis.tex
+++ b/apache_spark/thesis/thesis.tex
@@ -36,6 +36,12 @@
 \usepackage{MnSymbol}
 \usepackage{lmodern}
 \usepackage{multibib}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{amstext}
+\usepackage{amsfonts}
+\usepackage{mathrsfs}
+
 %\usepackage[acronyms]{glossaries}
 \usepackage[acronym,style=long,toc=true,numberedsection=autolabel]{glossaries} 
 %\robustify{\gls}
